Sun Aug 03 22:49:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The toolbar icons on the buddy list window display again.

Sun Aug 03 22:43:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimProtocolUtils.cpp:
	* src/main.cpp:
	  - We now use Resource::loadPixmap() to get our images.

Sun Aug 03 22:40:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	* mkstuff.conf:
	  - CVS snapshot packages now have a release of 0.$RELEASE.

Sun Aug 03 22:38:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.desktop:
	* mkipk.sh:
	* mkstuff.conf:
	* make.sh:
	  - Redid the build system.

Sun Aug 03 02:48:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Removing buddies from the buddy list is now supported. Well, it
	    would be, if I had a UI in place for the Request API. I'll look
	    into that nightmare tomorrow.

Sun Aug 03 02:32:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDebugWindow.cpp:
	* src/main.cpp:
	  - fprintf()s have been changed to qDebug() and friends.

Sun Aug 03 01:51:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - The Add Buddy button is no longer enabled when no accounts are
	    signed on. Thanks to treke for reporting this bug.

Sat Aug 02 19:40:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDialogs.cpp:
	  - Fixed a compiler error that occurred on the gcc I'm using for arm.
	    Picky picky.

Sat Aug 02 19:36:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - <font face="..."> lines with uninstalled fonts were causing QTextView