@@ -1,3 +1,9 @@
+Sun Aug 03 22:57:32 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	  - When the last buddy in a group signs off, the group is removed
+	    from view.
+
 Sun Aug 03 22:49:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
